# ezpz-sympy

./: README.md  justfile  main.py  pyproject.toml
