[project]
name = "ezpz-sympy"
version = "0.1.0"
description = "Calculations used for ezpz constraint solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sympy>=1.14.0",
]

[tool.uv.sources]
  sympy = { git = "https://github.com/sympy/sympy.git", rev = "f4fea5d4f50d07805d0312a49404be22470686fa" }
